# elium-main

./: .gitattributes  .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  Elium.spec  Elium.wizard.bat  LICENSE  PRIVACY_RGPD.md  README.md  SECURITY.md  build_exe.bat  dev.bat  docker-compose.yml  install.sh  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
brand/: make_icons.py
deploy/: .env.example  Caddyfile  README.md
desktop/src/: app.py
installer/: build.bat  build_common.py  build_msi.bat  elium.spec  elium.wxs  elium_launcher.py  elium_setup.iss  gen_manifest.py  make_msi_assets.py  stamp_version.py  updater.py
installer/assets/: license.rtf
office-addin/: manifest.xml  package.json
office-addin/src/: taskpane.html  taskpane.js
scripts/: gen_update_keypair.py
security/: README.md  poc_dos_spoof.py  poc_tamper.py
server/: .env.example  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json
server/src/: app.ts  config.ts  server.ts
server/tests/: app-hardening.test.ts  auth-routes.test.ts  crypto-server.test.ts  node-access.test.ts  oidc.test.ts  rbac.test.ts  storage.test.ts  tokens.test.ts  totp.test.ts
src/elium/: __init__.py  __main__.py
tests/python/: interop_helper.py  manual_e2e_container_check.py  test_cli.py  test_container.py  test_crypto.py  test_doc_cli.py  test_doc_id.py  test_dos_caps.py  test_edge_cases.py  test_format.py  test_journal.py  test_recipients.py  (+5 more)
web-studio/: .npmrc  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+249 files in other folders)
