[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elium"
version = "4.0.0"
description = "Elium — format documentaire .elium, éditeur local et signature électronique"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Elium Authors" }
]
dependencies = [
    "cryptography>=41.0.0",
    "argon2-cffi>=23.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov"
]
desktop = [
    "PySide6>=6.5"
]

[project.scripts]
elium = "elium.cli.main:main"
